--- a/Web.config
+++ b/Web.config
@@ -41,8 +41,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ConnstrEntities1" connectionString="metadata=res://*/Models.UserDetails.csdl|res://*/Models.UserDetails.ssdl|res://*/Models.UserDetails.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-S02ED12\SQL2016;initial catalog=Connstr;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
- 
+    <add name="ConnstrEntities" connectionString="metadata=res://*/Models.Register.csdl|res://*/Models.Register.ssdl|res://*/Models.Register.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-S02ED12\SQL2016;initial catalog=Connstr;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnstrEntities1" connectionString="metadata=res://*/Models.ImageModel.csdl|res://*/Models.ImageModel.ssdl|res://*/Models.ImageModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-S02ED12\SQL2016;initial catalog=Connstr;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
